--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     },
     "dependencies": {
         "bootstrap": "^4.0.0-alpha.6",
+        "laravel-echo": "^1.4.0",
+        "pusher-js": "^4.3.0",
         "vue-chat-scroll": "^1.3.3"
     }
 }
